LA/tests/test126.a.out
ERROR: instruction at line 9 attempted to use the negative index -1
