LA/tests/test126.a
void main ( ){

  :entry
  int64[] a
  int64 i

  a <- new Array(10)
  i <- -1
  a[i] <- 21

  return 

}
